--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 /test/version_tmp/
 /tmp/
 
+_site/
+.sass-cache/
+**/.DS_Store
+
 # Used by dotenv library to load environment variables.
 # .env
 
