--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,7 @@
 ---
 links:
-  -
-    label: agd.data.gouv.fr
+  - 
+    label: jekyll.data.gouv.fr
     children:
       -
         label: Données de référence
