Ajouts des liens internes dans le footer
Pouvoir faire des liens internes dans le footer.
Afin de faire apparaitre la différence pour la réappropriation, j'ai ajouté un exemple sur le lien "Données de références" qui renvoi vers une page interne.
J'ai rajouté une distinction target (lien interne) et url (lien externe). Par soucis de simplicité dans le fichier, étant donné que les liens "social" sont le plus souvent externe, j'ai changé de target en url pour eux aussi.

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,17 +1,17 @@
 ---
 links:
-  - 
+  -
     label: agd.data.gouv.fr
     children:
-      - 
+      -
         label: Données de référence
-        target: 
-      - 
+        target: _pages/page.md
+      -
         label: Condition générales d’utilisation
-        target: 
+        target:
       -
         label: API
-        target: https://www.data.gouv.fr/api
+        url: https://www.data.gouv.fr/api
   -
     children:
       -
@@ -25,18 +25,18 @@ links:
         target:
 
 social:
-  - 
+  -
     icon: mail
-    target: mailto:info@data.gouv.fr
-  - 
+    url: mailto:info@data.gouv.fr
+  -
     icon: twitter
-    target: https://www.twitter.com/datagouvfr
-  - 
+    url: https://www.twitter.com/datagouvfr
+  -
     icon: fb
-    target: https://www.facebook.com/etalab
-  - 
+    url: https://www.facebook.com/etalab
+  -
     icon: github
-    target: https://www.github.com/etalab
-  - 
+    url: https://www.github.com/etalab
+  -
     icon: rss
-    target: https://www.data.gouv.fr/fr/datasets/recent.atom
+    url: https://www.data.gouv.fr/fr/datasets/recent.atom
